corrigindo arquivo html,css e js e mudado layout

--- a/index.html
+++ b/index.html
@@ -7,30 +7,49 @@
         Imersão Dev - Aula 03 Números Variaveis
     </title>
 </head>
-
 <body>
     <div class="container">
         <h1 class="page-title">
+            Grande Desafio!
+        </h1>
+        <p class="page-subtitle">
+            Você Consegue acertar a maquina? Boa Sorte!
+        </p>
+        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page-logo"
+            alt="">
+        <h2> Digite Um Número Entre 0 e 50 Que Você Acha Ser o Código:
+        </h2>
+        <h3>Restaram Apenas: 5 Tentativas</h3>
+        <h4></h4>
+        <div class="botaoC">
+            <input type="number" id="numero">
+                <button onClick="tentativa()">Verificar</button>
+            </div>
+        
+    </div>
+    
+    <a href="https://alura.com.br/" target="_blank">
+        <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
+    </a>
+    </body>
+</body>
+
+<!-- <body>
+    <div class="container">
+        <h1  class="page-title"><font size="7">
             Mentalista
         </h1>
         <p class="page-subtitle">
-            Digite um número de 0 a 10
+            Digite um número de 0 a 50
         </p>
-
-        <br>
-        <input placeholder="Tente a sorte!" type="number" name="num1" id="num1">
-        <input type="button" value="Tentar" onclick="tentar()">
-        </br>
-        <br>
-        <div id="resposta"></div></br>
-        <br><img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg"
-            class="page-logo" alt=""></br>
-    </div>
+        <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page-logo"
+            alt="">
     </div>
     <a href="https://alura.com.br/" target="_blank">
         <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
     </a>
-</body>
+ 
+</body> -->
 
 <script type="text/javascript" src="script.js"></script>
 
